[package]
name = "olivia"
version = "0.1.0"
authors = ["LLFourn <lloyd.fourn@gmail.com>"]
edition = "2018"

[dependencies]
warp = "0.3"
# disable curve25519 for now
# curve25519-dalek = { version = "3", features = ["serde"] }
# ed25519-dalek = {version = "1", default-features = false, features = ["rand"] }
sha2 = "0.9"
blake2 = "0.9"
digest = { version = "0.9", features = ["std"] }
chrono = { version = "0.4", features = ["serde"] }
tokio-postgres = "0.7"
postgres-types = {version = "0.2", features = ["derive", "with-serde_json-1", "with-chrono-0_4" ]}
redis  = { version = "0.20", default-features = false }
serde = "1"
slog = "2"
slog-term = "2"
slog-async = "2"
serde_derive = "1"
serde_json = "1"
tokio = { version = "1.3", features = ["full"] }
futures = "0.3"
async-trait = "0.1"
structopt = "0.3"
thiserror = "1.0"
serde_yaml = "0.8"
rand = "0.8"
olivia_core = { path = "../olivia_core", features = ["std", "postgres-types"] }
olivia_secp256k1 = { path = "../olivia_secp256k1", features = ["postgres-types"] }
generic-array = { version = "0.14", features = ["more_lengths"] }
anyhow = "1"
lazy_static = "1"

[dev-dependencies]
testcontainers = { git = "https://github.com/llfourn/testcontainers-rs", rev = "5e1b6bd" }

[features]
docker_tests = []
