[package]
name = "olivia"
version = "0.1.0"
authors = ["LLFourn <lloyd.fourn@gmail.com>"]
edition = "2021"

[dependencies]
warp = "0.3"
blake2 = "0.9"
tokio-postgres = {  version = "0.7", features = [ "with-serde_json-1", "with-chrono-0_4" ]}
redis  = { version = "0.21", default-features = false }
serde = "1"
slog = "2"
slog-term = "2"
slog-async = "2"
serde_derive = "1"
serde_json = "1"
tokio = { version = "1.3", features = ["full"] }
tokio-stream = { version =  "0.1", features = ["sync"] }
async-trait = "0.1"
async-stream = "0.3"
structopt = "0.3"
thiserror = "1.0"
serde_yaml = "0.8"
olivia_core = { path = "../olivia_core", features = ["postgres-types"] }
olivia_secp256k1 = { path = "../olivia_secp256k1", features = ["postgres-types"] }
generic-array = { version = "0.14", features = ["more_lengths"] }
anyhow = "1"
lazy_static = "1"
bytes = "1"
chacha20 = {  version = "0.8", features = ["rng"] }
rand = "0.8"
percent-encoding = "2"

[dev-dependencies]
testcontainers = { version = "0.12"}

[features]
docker_tests = []
nightly = ["olivia_secp256k1/nightly"]
