[package]
name = "olivia_core"
version = "0.1.0"
authors = ["LLFourn <lloyd.fourn@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde", "clock"], default-features = false }
serde = {  version = "1", features = ["derive", "alloc"], default-features = false  }
serde_json = "1"
postgres-types = {version = "0.2", optional = true}


[features]
default = ["std"]
std = []
