[package]
name = "olivia_describe"
version = "0.1.0"
edition = "2018"
description = "descriptions for event ids and paths"
license = "0BSD"
repository = "https://github.com/LLFourn/olivia"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]


[dependencies]
wasm-bindgen = "0.2"
wee_alloc = { version = "0.4.5", optional = true }
olivia_core = { path = "../olivia_core" }

[dev-dependencies]
wasm-bindgen-test = "0.3.0"

[features]
default = ["wee_alloc"]
